@@ -1,23 +1,22 @@
-package com.example.backend.Monitoring;
+package com.example.backend.Monitoring.front;
 
+import com.example.backend.Monitoring.DiscordNotifier;
 import com.example.backend.config.aws.EnvUtils;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
-import io.github.cdimascio.dotenv.Dotenv;
+import lombok.RequiredArgsConstructor;
+import net.dv8tion.jda.api.EmbedBuilder;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
 @RestController
+@RequiredArgsConstructor
 public class FrontErrorController {
 
     private final DiscordNotifier notifier;
     private final ObjectMapper mapper = new ObjectMapper();
 
-    private static final String FRONT_ERROR_WEBHOOK = EnvUtils.get("DISCORD_FRONT_ERROR_WEBHOOK");
-
-    public FrontErrorController(DiscordNotifier notifier) {
-        this.notifier = notifier;
-    }
+    private static final String FRONT_ERROR_CHANNEL_ID = "1356087532474859572";
 
     @PostMapping("/front-error")
     public ResponseEntity<String> receiveFrontError(@RequestBody String payloadJson) {
@@ -30,21 +29,14 @@ public class FrontErrorController {
             String userAgent = node.has("userAgent") ? node.get("userAgent").asText() : "(unknown)";
             String time = node.has("time") ? node.get("time").asText() : "(unknown)";
 
-            String discordMessage = """
-            {
-              "embeds": [{
-                "title": "🚨 React 앱 에러 발생",
-                "description": "**메시지:** %s\\n**페이지:** %s\\n**시간:** %s",
-                "fields": [
-                  { "name": "Stack", "value": "%s" },
-                  { "name": "브라우저", "value": "%s" }
-                ],
-                "color": 15158332
-              }]
-            }
-            """.formatted(escape(message), escape(url), escape(time), escapeShort(stack), escape(userAgent));
+            EmbedBuilder embed = new EmbedBuilder()
+                    .setTitle("🚨 React 앱 에러 발생")
+                    .setDescription(String.format("**메시지:** %s\n**페이지:** %s\n**시간:** %s", escape(message), escape(url), escape(time)))
+                    .addField("Stack", escapeShort(stack), false)
+                    .addField("브라우저", escape(userAgent), false)
+                    .setColor(0xE74C3C); // 붉은 색
 
-            notifier.sendToDiscord(FRONT_ERROR_WEBHOOK, discordMessage);
+            notifier.sendEmbedBuilder(FRONT_ERROR_CHANNEL_ID, embed);
         } catch (Exception e) {
             e.printStackTrace();
             return ResponseEntity.internalServerError().body("Error while processing front error.");
@@ -53,9 +45,10 @@ public class FrontErrorController {
         return ResponseEntity.ok("React error received.");
     }
 
-    // 문자열 escaping (Discord JSON 대응)
     private String escape(String text) {
-        return text.replace("\\", "\\\\").replace("\"", "\\\"").replace("\n", "\\n");
+        return text.replace("\\", "\\\\")
+                .replace("\"", "\\\"")
+                .replace("\n", "\\n");
     }
 
     private String escapeShort(String text) {
